rstsr-aocl-ffi/header/blis.h

		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
#define chemm                     CHEMM
#define cher2k                    CHER2K
#define cherk                     CHERK
#define csymm                     CSYMM
#define csyr2k                    CSYR2K
#define csyrk                     CSYRK
#define dsymm                     DSYMM
#define dsyr2k                    DSYR2K
#define dsyrk                     DSYRK
#define ssymm                     SSYMM
#define ssyr2k                    SSYR2K
#define ssyrk                     SSYRK
#define zhemm                     ZHEMM
#define zher2k                    ZHER2K
#define zherk                     ZHERK
#define zsymm                     ZSYMM
#define zsyr2k                    ZSYR2K
#define zsyrk                     ZSYRK
#define ztrmm                     ZTRMM
BLIS_EXPORT_BLIS void ssymm(const char   *side, const char   *uplo, const f77_int *m, const f77_int *n, const float  *alpha, const float  *a, const f77_int *lda, const float  *b, const f77_int *ldb, const float  *beta, float  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void ssyrk(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const float  *alpha, const float  *a, const f77_int *lda, const float  *beta, float  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void ssyr2k(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const float  *alpha, const float  *a, const f77_int *lda, const float  *b, const f77_int *ldb, const float  *beta, float  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void dsymm(const char   *side, const char   *uplo, const f77_int *m, const f77_int *n, const double *alpha, const double *a, const f77_int *lda, const double *b, const f77_int *ldb, const double *beta, double *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void dsyrk(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const double *alpha, const double *a, const f77_int *lda, const double *beta, double *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void dsyr2k(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const double *alpha, const double *a, const f77_int *lda, const double *b, const f77_int *ldb, const double *beta, double *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void csymm(const char   *side, const char   *uplo, const f77_int *m, const f77_int *n, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *b, const f77_int *ldb, const scomplex  *beta, scomplex  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void chemm(const char   *side, const char   *uplo, const f77_int *m, const f77_int *n, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *b, const f77_int *ldb, const scomplex  *beta, scomplex  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void csyrk(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *beta, scomplex  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void cherk(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const float  *alpha, const scomplex  *a, const f77_int *lda, const float  *beta, scomplex  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void csyr2k(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *b, const f77_int *ldb, const scomplex  *beta, scomplex  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void cher2k(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const scomplex  *alpha, const scomplex  *a, const f77_int *lda, const scomplex  *b, const f77_int *ldb, const float  *beta, scomplex  *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void zsymm(const char   *side, const char   *uplo, const f77_int *m, const f77_int *n, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *b, const f77_int *ldb, const dcomplex *beta, dcomplex *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void zhemm(const char   *side, const char   *uplo, const f77_int *m, const f77_int *n, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *b, const f77_int *ldb, const dcomplex *beta, dcomplex *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void zsyrk(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *beta, dcomplex *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void zherk(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const double *alpha, const dcomplex *a, const f77_int *lda, const double *beta, dcomplex *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void zsyr2k(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *b, const f77_int *ldb, const dcomplex *beta, dcomplex *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void zher2k(const char   *uplo, const char   *trans, const f77_int *n, const f77_int *k, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, const dcomplex *b, const f77_int *ldb, const double *beta, dcomplex *c, const f77_int *ldc);
BLIS_EXPORT_BLIS void ztrmm(const char   *side, const char   *uplo, const char   *transa, const char   *diag, const f77_int *m, const f77_int *n, const dcomplex *alpha, const dcomplex *a, const f77_int *lda, dcomplex *b, const f77_int *ldb);
		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;