rstsr-openblas-ffi/src/f77blas.rs

    pub fn ztrmm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut blas_int,
    );
    pub fn xtrmm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut c_char,
        arg5: *mut blas_int,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut blas_int,
    );
    pub fn ssymm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn dsymm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn qsymm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
    pub fn csymm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn zsymm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn xsymm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
    pub fn csymm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn zsymm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn xsymm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
    pub fn ssyrk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut f32,
        arg10: *mut blas_int,
    );
    pub fn dsyrk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut f64,
        arg10: *mut blas_int,
    );
    pub fn qsyrk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
    );
    pub fn csyrk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut f32,
        arg10: *mut blas_int,
    );
    pub fn zsyrk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut f64,
        arg10: *mut blas_int,
    );
    pub fn xsyrk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
    );
    pub fn ssyr2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn dsyr2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn qsyr2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
    pub fn csyr2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn zsyr2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn xsyr2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
    pub fn chemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn zhemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn xhemm(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
    pub fn chemm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn zhemm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn xhemm3m(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
    pub fn cherk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut f32,
        arg10: *mut blas_int,
    );
    pub fn zherk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut f64,
        arg10: *mut blas_int,
    );
    pub fn xherk(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
    );
    pub fn cher2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
        arg10: *mut f32,
        arg11: *mut f32,
        arg12: *mut blas_int,
    );
    pub fn zher2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
        arg10: *mut f64,
        arg11: *mut f64,
        arg12: *mut blas_int,
    );
    pub fn xher2k(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut blas_int,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
        arg10: *mut xdouble,
        arg11: *mut xdouble,
        arg12: *mut blas_int,
    );
